--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,10 @@ dependencies = [
 ]
 
 [project.scripts]
-jira-tool = "src.main"
+jira-tool = "main:app"
+
+[tool.uv]
+package = true
 
 [dependency-groups]
 dev = [
