feat: implement idempotency check and smart dry-run logic
- feat(core): add 'get_existing_epic' and 'get_existing_story' to JiraAdapter to prevent duplicate tickets.
- fix(core): improve JQL query with proper quote escaping for titles containing spaces.
- feat(main): add support for processing directories of markdown files in addition to single files.
- refactor(adapter): update dry-run mode to allow connection and existence checks without writing changes.
- docs: update README.md with new workflow, directory structure, and linting commands.

--- a/config.yaml
+++ b/config.yaml
@@ -1,17 +1,15 @@
 jira:
-  url: "https://tu-empresa.atlassian.net"
-  email: "tu-email@empresa.com"
-  # NOTA: El token NO va aquí por seguridad
+  url: "https://meridian-t9.atlassian.net"
+  email: "alex.aga816@gmail.com"
+  # ¡NO pongas el token aquí!
 
 defaults:
   priority: "Medium"
   issue_type_epic: "Epic"
   issue_type_story: "Story"
 
-# Mapeo de proyectos: Alias -> Key en Jira
 projects:
-  tienda: 
-    key: "ECOMM"
-    epic_name_field: "Epic Name" # Opcional, si ya sabemos el nombre
-  rrhh:
-    key: "HR"
+  # Alias 't9' para usar en consola
+  MERIDIAN:
+    key: "MT"  # <--- La CLAVE real de tu proyecto en Jira (ej. PED, T9, CUST)
+    epic_name_field: "Epic Name" # Déjalo así por ahora
